--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .nav-bar {
-    @apply flex items-center justify-between border p-5 px-20;
+    @apply flex items-center justify-between bg-[#e9f4ee] p-5 px-20 text-gray-500;
   }
 
   .logo {
@@ -21,5 +21,8 @@
 
   .nav-link {
     @apply text-xl font-normal uppercase;
+  }
+  .nav-login-btn {
+    @apply inline-flex h-[50.53px] w-[137.98px] items-center justify-center gap-[9.72px] rounded-md border-2 border-gray-500 px-[39.84px] py-[10.69px];
   }
 }
